# Cpp-Password-Manager

./: .gitignore  AppManager.cpp  AppManager.h  CMakeLists.txt  Dockerfile  EncryptedLocalStorage.cpp  EncryptedLocalStorage.h  GuiApp.cpp  GuiApp.h  Hasher.cpp  Hasher.h  LoginDialog.cpp  LoginDialog.h  MainFrame.cpp  MainFrame.h  Mode.h  PassEncryptorDecryptor.cpp  PassEncryptorDecryptor.h  PasswordDbClass.cpp  PasswordDbClass.h  PasswordFilter.cpp  PasswordFilter.h  PasswordGenerator.cpp  PasswordGenerator.h  README.md  Server.cpp  Server.h  UserDbClass.cpp  UserDbClass.h  index.html  login.html  main.cpp  register.html
.github/workflows/: build-and-test.yml
src/: genPass.html  register.html
src/pages/: genPass.html  index.html  login.html  register.html
tests/: CMakeLists.txt  test_EncryptedLocalStorage.cpp  test_Hasher.cpp  test_PasswordDb.cpp  test_PasswordFilter.cpp  test_PasswordGenerator.cpp  test_Server.cpp  test_UserDb.cpp
